web_files/styles/tracker.css
html, body {
    display: flex;
    flex-direction: column;
    margin: 0;
    box-sizing: border-box;
    padding: 0;
    height: 100%;
    width: 100%;
    font-family: 'Nunito Sans', sans-serif;
    font-style: normal;
    font-weight: normal;
    font-size: 13px;
}

.header {
    top: 0;
    left: 0;
    width: 100%;
}

.navbar {
    display: flex;
    align-items: center;
    background-color: white;
    box-shadow: 0 2px 4px -1px rgba(0,0,0,0.25);
}

.track_and_button,
.logo,
.sign_in_box {
    flex: 1;
    display: inline-flex;
    justify-content: center;
}

.sign_in_box {
    display: flex;
    align-items: center;
    margin-left: auto;
    justify-content: flex-end;
}

.track_and_button {
    margin-right: auto;
    justify-content: flex-start;
}

.enter_track {
    display: flex;
    width: 250px;
    height: 32px;
    border: 1px solid #9B51E0;
    background-color: white;
    opacity: .8;
    align-items: center;
    box-sizing: border-box;
    border-radius: 19px;
    margin-top: 4px;
    margin-bottom: 4px;
    margin-left: 4px;
}

.enter_numbers_box i {
    padding: 10px;
}

.enter_numbers_box input {
    background: none;
    border: none;
    flex: 1;
    height: 100%;
    outline: none;
    width: 200px;
}

.add_button {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50px;
    height: 32px;
    background: #4DBC7B;
    opacity: .75;
    border-radius: 5px;
    margin-left: 4px;
    margin-top: 4px;
    margin-right: 4px;
}

.add_button:hover {
    opacity: 1;
    cursor: pointer;
}

.logo {
    display: flex;
    height: 32px;
    justify-self: center;
    opacity: .8;
}

.sign_in_button {
    background-color: rgb(187, 107, 217, 0.75);
    border-radius: 3px;
    width: 73px;
    height: 32px;
    margin-right: 4px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.sign_in_button:hover {
    cursor: pointer;
    background-color: rgb(187, 107, 217);
}

.sign_in_box p {
    font-size: 18px;
    font-weight: 700;
    margin-right: 5px;
}

.user_icon {
    background-color: rgb(187, 107, 217, 0.75);
    border-radius: 50%;
    width: 40px;
    height: 40px;
    margin-right: 5px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.user_icon:hover {
    cursor: pointer;
    background-color: white;
}

.user_initial {
    position: absolute;
    z-index: 1;
    font-size: 18px;
    font-weight: 700;
}

.logout_button {
    position: absolute;
    z-index: 2;
    visibility: hidden;
    color: red;
}

.logout_button:hover {
    text-decoration: underline;
    font-weight: 700;
}
  
.user_icon:hover .logout_button {
    visibility: visible;
}
.user_icon:hover .user_initial {
    visibility: hidden;
}

.tracker_body {
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 100%;
}

.current_displayed_collapsible {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    width: 756px;
    height: 36px;
    margin-top: 20px;
    margin-bottom: 5px;
    border-radius: 10px 10px 0px 0px;
    background-color: rgb(187, 107, 217, 0.75);
}

.active, .current_displayed_collapsible:hover {
    cursor: pointer;
    background-color: rgb(187, 107, 217);
}

.track_number_title {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.more_numbers_selector {
    visibility: hidden;
    margin-right: 8px;
    display: flex;
    flex-direction: row;
    align-items: center;

}

.visible {
    visibility: visible;
}

.more_numbers_selector p {
    margin-right: 4px;
}

.additional_track_nums {
    max-height: 0;
    overflow: hidden;
    width: 752px;
    transition: max-height 0.2s ease;
    margin-top: -5px;
    margin-bottom: 5px;
    border-bottom-color: rgb(187, 107, 217);
    border-bottom-style: solid;
    border-bottom-width: 0px;
    margin-left: 5px;
    border-left-color: rgb(187, 107, 217);
    border-left-style: solid;
    border-left-width: 2px;
    margin-right: 5px;
    border-right-color: rgb(187, 107, 217);
    border-right-style: solid;
    border-right-width: 2px;
}

.add_auto_height {
    max-height: 138px;
    min-height: 54px;
    overflow: auto;
    border-bottom-width: 2px;
}

.track_data_line {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: center;
    width: 100%;
    height: 27px;
    font-size: 18px;

}

.tdl_bold {
    font-weight: 700;
}

.track_data_line:hover,
.track_data_line_bold:hover {
    background-color: #c397ed;
}

.data_line_l {
    display: flex;
    width: 50%;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin-right: 15px;
    margin-left: 7px;
}

.data_line_r {
    display: flex;
    width: 50%;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    margin-left: 14px;
    margin-right: 7px;
    
}
.tracking_number {
    font-weight: 700;
    font-size: 24px;
    opacity: .8;
}

.carrier_icon_bold {
    display: flex;
    width: 69px;
    height: 24px;
    font-size: 12px;
    font-weight: 700;
    justify-content: center;
    align-items: center;
    border: 2px solid #56CCF2;
    color: #56CCF2;
    box-sizing: border-box;
    border-radius: 5px;
    margin-left: 10px;
}

.carrier_icon_reg {
    display: flex;
    width: 69px;
    height: 24px;
    font-size: 12px;
    font-weight: 400;
    justify-content: center;
    align-items: center;
    border: 1px solid #56CCF2;
    color: #56CCF2;
    box-sizing: border-box;
    border-radius: 5px;
    margin-left: 10px;
}

.map_estimates {
    display: flex;
    flex-direction: row;
    height: 220px;
    width: 756px;
    margin-left: 4px;
    margin-right: 4px;
    justify-content: space-between;
}

#map {
    width: 363px;
    height: 220px;
}

.completed_bar {
    width: 756px;
    height: 30px;
    background: #C4C4C4;
    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
    border-radius: 5px;
    margin-top: 20px;
    margin-bottom: 20px;
}

.percent_complete {
    display: flex;
    height: 100%;
    width: 50%;
    background: #BB6BD9;
    border-radius: 5px;
    justify-content: center;
    align-items: center;
    transition: width 2s ease;
}

.percent_complete:hover {
    width: 100%;
    cursor: pointer;
}

.track_data_box {
    width: 363px;
    height: 220px;
}

.location_box {
    height: 195px;
    overflow: auto;
}

.mileage_listings {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    height: 170px;
    width: 100%;
    overflow: auto;
}

.est_delivery,
.location_times,
.miles_soFar,
.mileages_box {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-content: flex-start;
}

.miles_total_estimated {
    display: flex;
    flex-direction: row;
    height: 25px;
    justify-content: space-between;
}

.bold_body {
    font-size: 18px;
    font-weight: 700;
    height: 25px;
    top: 0px;
    margin-top: 0px;
}

.reg_body {
    margin-top: 15px;
}



.miles_traveled_and_graph {
    display: flex;
    flex-direction: row;
    height: 220px;
    width: 756px;
    margin-left: 4px;
    margin-right: 4px;
    justify-content: space-between;
}

.miles_data {
    width: 363px;
    height: 220px;
    display: flex;
    flex-direction: column;
}

.miles_graph {
    width: 363px;
    height: 220px;
    background: #56CCF2;
}

#bottom_line {
    opacity: 0.75;
    border: 1px solid #BDBDBD;
    padding: 0px;
}

.footer {
    position: sticky;
    bottom: 0;
    width: 100%;
    background: white;
}

.footer_div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 32px;
    opacity: 0.75;
}

.holberton img {
    width: 25px;
    height: 25px;
}

.holberton {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.holberton:hover {
    color: #D9534F;
    text-decoration: underline;
    cursor: pointer;
    opacity: 1;
}

#footer_link {
    padding-right: 10px;
}

#footer_link:hover {
    cursor: pointer;
    text-decoration: underline;
    opacity: .9;
}

